src/test/resources/api/WEB-INF/jsp/error/json/403.jsp
{
	"status":"403",
	"title":"Forbidden",
	"description": "You don't have permission to access on this server."
}
<%@ page contentType="application/json; charset=UTF-8"%>